--- a/index.html
+++ b/index.html
@@ -1,9 +1,71 @@
-<!DOCTYPE html>
-<html>
+  <!DOCTYPE html>
+  <!--ICS2O-unit5-04-->
+  <html lang="en-ca">
   <head>
-    <title>Title</title>
+    <meta charset="utf-8" />
+    <meta name="description" content="Museum Admissions" />
+    <meta name="keywords" content="mths, ICS2O" />
+    <meta name="author" content="Lamees-Hemdan" />
+    <meta name="viewport" content="width=device-width, intitial-scale=1.0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-amber.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/getmdl-select.min.css" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
+    <link rel="manifest" href="./site.webmanifest" />
+    <title>Museum Admissions</title>
   </head>
   <body>
-    <p>Paragraph</p>
-  </body>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/getmdl-select.min.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">Museum Admissions</span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <div class="page-content">Please enter your age and the day of the week:</div>
+        <image src="./images/fantasy museum.jpg" alt="museum" width="30%" hight="auto" style="padding: 100 px;" />
+        <br />
+        <!-- Numeric Textfield -->
+        <form action="#">
+          <div class="mdl-textfield mdl-js-textfield">
+            <input class="mdl-textfield__input" type="text" pattern="-?[0-9]*(\.[0-9]+)?" id="age">
+            <label class="mdl-textfield__label" for="age">Your age</label>
+            <span class="mdl-textfield__error">Input is not a number!</span>
+          </div>
+        </form>
+        <br />
+        <!-- Simple Select with arrow -->
+        <div class="mdl-textfield mdl-js-textfield getmdl-select">
+          <input type="text" value="" class="mdl-textfield__input" id="day" readonly>
+          <input type="hidden" value="" name="day">
+          <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+          <label for="day" class="mdl-textfield__label">Day of The Week..</label>
+          <ul for="day" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+            <li class="mdl-menu__item" data-val="Mon">Monday</li>
+            <li class="mdl-menu__item" data-val="Tue">Tuesday</li>
+            <li class="mdl-menu__item" data-val="Wed">Wednesday</li>
+            <li class="mdl-menu__item" data-val="Thu">Thursday</li>
+            <li class="mdl-menu__item" data-val="Fri">Friday</li>
+            <li class="mdl-menu__item" data-val="Sat">Saturday</li>
+            <li class="mdl-menu__item" data-val="Sun">Sunday</li>
+          </ul>
+        </div>
+        <br />
+        <br />
+        <!-- Accent-colored raised button with ripple -->
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+          onclick="myButtonClicked()">
+          Submit
+        </button>
+        <br />
+        <div id="output"></div>
+      </main>
+    </div>
+</body>
 </html>
