--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <!-- Accent-colored raised button with ripple -->
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
           onclick="myButtonClicked()">
-          Submit
+          Calculate
         </button>
         <br />
         <div id="output"></div>
